09-ingress/eks/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-001
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx001.mxjrlab.com.br
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-001
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-002
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx002.mxjrlab.com.br
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-002
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-003
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx003.mxjrlab.com.br
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: nginx-003
            port:
              number: 8080
